guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - guestbook.doombagoomba.com
    secretName: guestbook-tls
  rules:
  - host: guestbook.doombagoomba.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
