hastebin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hastebin
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hastebin
  namespace: hastebin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hastebin
    spec:
      containers:
      # TODO: manage config.js inside the container with ConfigMaps
      # this will allow us to configure redis to be on another container
      - name: hastebin
        image: jabagawee/haste-server
        ports:
        - containerPort: 7777
      # TODO: split out into its own container
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: hastebin
  namespace: hastebin
  labels:
    app: hastebin
spec:
  ports:
  - port: 80
    targetPort: 7777
  selector:
    app: hastebin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hastebin
  namespace: hastebin
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - paste.doombagoomba.com
    secretName: hastebin-tls
  rules:
  - host: paste.doombagoomba.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hastebin
          servicePort: 80
