httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: redis
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: httpbin
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: citizenstig/httpbin
        ports:
        - containerPort: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
  namespace: httpbin
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - httpbin.doombagoomba.com
    secretName: httpbin-tls
  rules:
  - host: httpbin.doombagoomba.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 80
